# kmtracker

./: .gitignore  README.md  gitlab-ci.yml  pyproject.toml
.github/workflows/: ci.yml
kmtracker/: __init__.py  __main__.py  cli.py  db.py  pretty.py
kmtracker/_migrations/: m00_add_migrations_table.py  m01_add_rides_table.py  m02_change_duration_to_int.py  m03_add_gpx_column.py  m04_add_aliases_table.py
src/kmtracker/: __init__.py  cli.py  db.py  plot.py  pretty.py
src/kmtracker/_migrations/: m02_change_duration_to_int.py  m04_add_aliases_table.py
src/kmtracker/api/: __init__.py
src/kmtracker/api/templates/: base.html  index.html
src/kmtracker/api/templates/components/: _form_ride.html  _stats.html  _table.html  _table_head.html  _table_row.html  macros.html
tests/: test_cli.py  test_db.py  test_kmtracker.py
