[project]
name = "kmtracker"
version = "0.3.0"
description = "dead simple cli tool to track bike rides"
authors = [
    { name = "davekch", email = "dvkch@proton.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "gpxpy>=1.6.2",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "rich>=13.9.4",
    "uvicorn>=0.35.0",
]

[project.scripts]
kmtracker = "kmtracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
