[project]
name = "kmtracker"
version = "0.4.0"
description = "dead simple cli tool to track bike rides"
authors = [
    { name = "davekch", email = "dvkch@proton.me" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dayplot>=0.4.2",
    "gpxpy>=1.6.2",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.9.4",
]

[project.scripts]
kmtracker = "kmtracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
